<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/cv_product1"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_60sdp"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_16sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:background="@drawable/bg_category_unselected"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chai"
            android:fontFamily="@font/aclonica"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            />
        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/niara_bbsr"
            android:layout_below="@+id/tv_title"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            />

        <TextView
            android:id="@+id/tv_price_strikeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_strikeout"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            />
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/bluePrimer"
            android:layout_toLeftOf="@+id/tv_price_strikeout"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            />
        <TextView
            android:id="@+id/tv_rupee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="₹"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/bluePrimer"
            android:layout_toLeftOf="@+id/tv_price"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_8sdp"
            />


    </RelativeLayout>

</androidx.cardview.widget.CardView>